[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/challenges/challenge2-intro/Challenge2Intro.gd" type="Script" id=1]
[ext_resource path="res://scenes/WhiteBackground/BG.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/challenges/challenge2-intro/IntroNodes.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/logo-in-game-black.png" type="Texture" id=4]
[ext_resource path="res://resources/ChallengeNumberFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://resources/theme.tres" type="Theme" id=6]
[ext_resource path="res://resources/ChallengeTitleFontData.tres" type="DynamicFontData" id=7]
[ext_resource path="res://resources/ChallengeRuleFont.tres" type="DynamicFont" id=8]
[ext_resource path="res://objects/Servant.tscn" type="PackedScene" id=9]
[ext_resource path="res://objects/Castle.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/challenges/intro/DragUtoHereToStart.tscn" type="PackedScene" id=11]
[ext_resource path="res://objects/UTO.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]
size = 62
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=2]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Challenge2Intro" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" parent="." instance=ExtResource( 2 )]

[node name="IntroNodes" type="Node2D" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Logo" type="Sprite" parent="IntroNodes"]
visible = false
position = Vector2( 40, 40 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
centered = false

[node name="Challenge" type="Label" parent="IntroNodes"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 290.0
margin_top = 197.0
margin_right = 473.0
margin_bottom = 243.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Challenge 2"
align = 1

[node name="Title" type="Label" parent="IntroNodes"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 110.0
margin_top = 237.0
margin_right = 690.0
margin_bottom = 320.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Standard Identities"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouAreUto" type="Label" parent="IntroNodes"]
anchor_right = 1.0
margin_left = 123.819
margin_top = 352.968
margin_right = 665.819
margin_bottom = 393.968
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "YOU ARE UTO, NOT A CASTLE SERVANT."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Servant" parent="IntroNodes" instance=ExtResource( 9 )]
position = Vector2( 520, 490 )

[node name="YouMustEnterTheCastle" type="Label" parent="IntroNodes"]
margin_left = 168.145
margin_top = 610.0
margin_right = 593.145
margin_bottom = 651.0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "YOU MUST ENTER THE CASTLE."

[node name="Castle" parent="IntroNodes" instance=ExtResource( 10 )]
position = Vector2( 370, 720 )

[node name="OtherRules" type="Label" parent="IntroNodes"]
margin_left = 184.177
margin_top = 808.242
margin_right = 577.177
margin_bottom = 937.242
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GUARDS KILL UTO.
RED TEXT IS A BARRIER.
BLUE TEXT CAN BE PUSHED."
align = 1

[node name="DragUtoHereToStart" parent="IntroNodes" instance=ExtResource( 11 )]

[node name="UTO" parent="IntroNodes" instance=ExtResource( 12 )]
position = Vector2( 260, 490 )
enemiesInteractionEnabled = false

[node name="Overlay" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Overlay"]
autoplay = "disappear"
anims/appear = SubResource( 2 )
anims/disappear = SubResource( 3 )
[connection signal="uto_entered" from="IntroNodes/DragUtoHereToStart" to="." method="_on_DragUtoHereToStart_uto_entered"]
[connection signal="animation_finished" from="Overlay/AnimationPlayer" to="IntroNodes" method="_on_AnimationPlayer_animation_finished"]
